added gets end points for user
